# lupyd-protos

./: Cargo.toml  README.md  ads.proto  auth.proto  chats.proto  credits.proto  lupyd-md.proto  lupyd-msg.proto  message.proto  notification.proto  package.json  pnpm-lock.yaml  post.proto  user.proto  uuid.proto
java/: README.md  pom.xml
rust/: Cargo.toml  README.md  build.rs
rust/src/lupyd/: auth.rs  markdown.rs  post.rs
typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: auth.ts  index.ts
